[TASK]    Group plugins in plugin selector by using addTcaSelectItemGroup. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/92
[TASK]    Remove deprecated TCA configurations. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/93
[TASK]    Clean up ext_emconf.php. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/94
[DOCS]    Align with new TYPO3 documentation standards. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/95

Version 4.4.1, May 2022
[BUGFIX]  Add PHP version constraint. Thanks to Mathias Brodala. https://github.com/tpwd/ke_search/pull/89

Version 4.4.0, April 2022
[!!!]     For files indexed by the non-FAL-indexer the absolute path is now stored in the index instead of the relative path.
[!!!]     The file modification date is not part of the hash for indexed files anymore. That means all files have to be re-indexed after updating the extension. Please start the full indexing.
[!!!]     This version needs at least PHP 7.4, although it is not stated in the composer.json.
[FEATURE] Add incremental indexing for files. https://github.com/tpwd/ke_search/issues/64
[FEATURE] Add date range filter. https://github.com/tpwd/ke_search/issues/40
[BUGFIX]  Fix PHP8 issue with non-existing array index in file indexer. https://github.com/tpwd/ke_search/issues/84
[BUGFIX]  Avoid typo3conf path when including backend CSS file. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/80
[BUGFIX]  Unset page parameter for filter options in 'list' type filter. https://github.com/tpwd/ke_search/issues/24
[BUGFIX]  Fix PHP 8 issue: Missing extConfPremium Configuration results in Error. https://github.com/tpwd/ke_search/issues/86
[BUGFIX]  Empty search result results in many 'SELECT from tags ...'. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/9
[BUGFIX]  Fix cleanup of nested piVars
[TASK]    Use dependency injection in commands. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/72